--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,60 @@ body {
     text-wrap: balance;
   }
 }
+
+#course {
+  width: 500px;
+  max-width: 70vw;
+}
+
+.courseName {
+  margin-top: 5%;
+}
+
+.input{
+  width: 250px;
+  height: 30px;
+  border-radius: 7px;
+  font-size: auto;
+}
+
+.inputContainer {
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.questionDrop {
+  color: black;
+  width: 250px;
+  height: 30px;
+  border-radius: 7px;
+  font-size: auto;
+}
+
+.questionType {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  margin-top: 5%;
+  border-radius: 5px;
+}
+
+.submit {
+  margin-top: 5%;
+  padding: 5px;
+  background-color: gray;
+  border: 1px solid #666;
+  width: 300px;
+  color: white;
+  border-radius: 15px;
+}
+
+.submit:active {
+  box-shadow: none;
+  transform: scale(0.9);
+}
