--- a/src/css/input.css
+++ b/src/css/input.css
@@ -8,7 +8,8 @@
 
 .generate {
     background-color: white;
-    margin-top: 5%;
+    position: relative;
+    top: 15px;
     width: 150px;
     height: 40px;
     border-radius: 15px;
@@ -16,6 +17,13 @@
 }
 
 .inputContainer {
+    top: 5%;
+    position: absolute;
+    width: 600px;
+    height: 850px;
+    max-width: 90vw;
+    border-radius: 10px;
+    background-color: rgb(50, 50, 50);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,8 +32,9 @@
 
 .numQuestion {
     margin-top: 5%;
-    width: 160px;
+    width: 200px;
     border-radius: 10px;
+    justify-content: center;
     text-align: center;
     height: 30px;
     max-width: 70vw;
@@ -47,4 +56,15 @@
     text-align: center;
     height: 30px;
     max-width: 70vw;
+}
+
+.wtf {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
+    padding: 0.9rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
